[tool.poetry]
name = "banco-dio"
version = "0.1.0"
description = ""
authors = ["Alexandre Santos <lexander.alfa@gmail.com>"]
readme = "README.md"
packages = [{include = "banco_dio"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
